--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2 class="sub-title">Innovativ Utvekling</h2>
             </div>
             <div class="col-md-6 col-lg">
-                <img class="title-image" src="pictures/föreläsning.jpg" alt="föreläsning">
+                <img class="title-image" src="./pictures/föreläsning.jpg" alt="föreläsning">
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
                     amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
             </div>
             <div class="col">
-                <img class="img-coachning" src="pictures/logo-social.png" alt="Italian Trulli">
+                <img class="img-coachning" src="./pictures/logo-social.png" alt="Italian Trulli">
             </div>
         </div>
     </div>
@@ -58,7 +58,7 @@
     <div class="container-fluid föreläsningar">
         <div class="row">
             <div class="col">
-                <img class="img-coachning" src="pictures/logo-social.png" alt="Italian Trulli">
+                <img class="img-coachning" src="./pictures/logo-social.png" alt="Italian Trulli">
             </div>
             <div class="col">
                 <h2>Föreläsningar</h2>
@@ -78,7 +78,7 @@
                     amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
             </div>
             <div class="col">
-                <img class="img-coachning" src="pictures/logo-social.png" alt="Italian Trulli">
+                <img class="img-coachning" src="./pictures/logo-social.png" alt="Italian Trulli">
             </div>
         </div>
     </div>
